[tool.poetry]
name = "isaac"
version = "0.1.0"
description = ""
authors = ["kmykprn"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10"
torch = {version = "2.5.1", source = "torch_cu121"}
isaacsim = {version = "4.2.0.2", extras = ["all", "extscache"], source = "isaac_sim"}


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "pypi_nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"


[[tool.poetry.source]]
name = "isaac_sim"
url = "https://pypi.nvidia.com"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
